# MATH_GROUP_TRAINEE_2025

./: Desafio_Técnico.html  Desafio_Técnico.ipynb  README.md  banco_desafio.db  pyproject.toml
