[project]
name = "math_group"
version = "0.1.0"
description = ""
authors = [
    {name = "NicolasSP90",email = "nicolassp90@hotmail.com"}
]
readme = "README.md"
requires-python = "3.13.*"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipython-sql (>=0.5.0,<0.6.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
